--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "16.5.0",
+    "react-compound-timer": "^1.0.12",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-countdown-component": "^2.2.0",
     "react-navigation": "^3.0.9"
